--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/ExportPageBase.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/ExportPageBase.razor
@@ -1,7 +1,5 @@
-﻿@page "/export"
-@namespace SwashbucklerDiary.Maui.Pages
-@inherits ExportPageBase
-
+﻿@namespace SwashbucklerDiary.Rcl.Pages
+@inherits ImportantComponentBase
 
 <MyAppBar>
     <MButton Icon
@@ -28,7 +26,7 @@
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            <LANTransferPage></LANTransferPage>
+            <DynamicComponent Type="LANTransferPageType" />
         </MContainer>
     </SwiperTabItem>
 </SwiperTabItems>
