🐛 fix: Cannot open another card's menu when the menu is open

--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
@@ -59,7 +59,7 @@
              Items="SortItems">
 </RadioDialog>
 
-<MultiMenu @ref="multiMenu"
-           @bind-Visible="showMenu"
-           DynamicListItems="menuItems">
+<MultiMenu @bind-Visible="showMenu"
+           DynamicListItems="menuItems"
+           ActivatorAttributes="menuActivatorAttributes">
 </MultiMenu>
