--- a/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
@@ -53,7 +53,7 @@
              Items="SortItems">
 </RadioDialog>
 
-<MultiMenu @ref="multiMenu"
-           @bind-Visible="showMenu"
-           DynamicListItems="menuItems">
+<MultiMenu @bind-Visible="showMenu"
+           DynamicListItems="menuItems"
+           ActivatorAttributes="menuActivatorAttributes">
 </MultiMenu>
