--- a/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
@@ -37,7 +37,7 @@
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            <AudioCardList Value="audioResources"></AudioCardList>
+            <AudioResourceCardList Value="audioResources"></AudioResourceCardList>
         </MContainer>
     </SwiperTabItem>
     <SwiperTabItem>
