🐛 fix(VideoWaterfall): Clicking on ViewReferences is invalid

--- a/src/SwashbucklerDiary.Rcl/Components/Waterfall/VideoWaterfall/VideoResourceCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/Waterfall/VideoWaterfall/VideoResourceCard.razor
@@ -5,4 +5,5 @@
        @oncontextmenu:preventDefault="true"
        @attributes="activatorAttributes"
        class="video-card rounded-lg"
-       src="@Value.ResourceUri" />
+       src="@src" />
+       
