--- a/src/SwashbucklerDiary.Rcl/Pages/Index/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Index/IndexPage.razor
@@ -30,7 +30,7 @@
         <MContainer Class="my-container"
                     Fluid="true">
             <TagCardList @bind-Value="Tags"
-                         @bind-Diaries="Diaries">
+                         Diaries="Diaries">
             </TagCardList>
         </MContainer>
     </SwiperTabItem>
