♻️ refactor(Dialog): Add DisabAutoFocus to a dialog with an input box

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
@@ -5,6 +5,7 @@
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
+                  DisableAutoFocus
                   OnBeforeShowContent="HandleOnBeforeShowContent"
                   OnAfterShowContent="FocusAsync">
     <MCard>
