--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
@@ -5,6 +5,7 @@
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="480"
+                  DisableAutoFocus
                   OnAfterShowContent="FocusAsync">
     <MForm @ref="@form"
            Model="@model"
