--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDavConfigDialog.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDavConfigDialog.razor
@@ -5,6 +5,7 @@
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="480"
+                  DisableAutoFocus
                   OnAfterShowContent="FocusAsync"
                   OnBeforeShowContent="BeforeShowContent">
     <MForm @ref="@mForm"
