--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANConfigDialog.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANConfigDialog.razor
@@ -5,6 +5,7 @@
                   MyValueChanged="VisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="480"
+                  DisableAutoFocus
                   OnAfterShowContent="FocusAsync"
                   OnBeforeShowContent="BeforeShowContent">
     <MForm @ref="@MForm"
