🆕 feat: support AppActions(shortcut)

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/UrlSchemePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/UrlSchemePage.razor
@@ -10,7 +10,7 @@
     <MChipGroup @bind-Value="scheme"
                 Class="mb-2"
                 Mandatory>
-        @foreach (var item in schemes)
+        @foreach (var item in SchemeConstants.Schemes)
         {
             <MChip Value="item"
                    Filter
